fix: added spacing between headers

--- a/src/Experience.css
+++ b/src/Experience.css
@@ -5,15 +5,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 10vh;
   z-index: 1;
   font-family: "Space Grotesk";
-}
-
-.chrono {
-  align-self: center;
-}
-
-.timeline h1 {
-  margin-bottom: 5vh;
 }
